Fix up the navbar so it works on mobile

--- a/themes/rmwd/assets/sass/_variables.scss
+++ b/themes/rmwd/assets/sass/_variables.scss
@@ -4,6 +4,7 @@ $header-sans-serif: "Raleway", "Helvetica", "Arial", sans-serif;
 $family-sans-serif: "Roboto", "Helvetica", "Arial", sans-serif;
 
 $navbar-desktop-height: 6.25rem;
+$navbar-background-color: $grey-darker;
 
 $rmwd-orange: hsl(13, 87%, 33%);
 
